# code-base

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.yaml  plano-implementacao.md  pyproject.toml
.github/workflows/: ci.yml
constraints/: semantic.txt
docs/: architecture.md  implementation-plan.md  indexing.md  mcp-adapter.md  plano-execucao-agente-powershell.md  project-status.md  semantic-search.md  tools.md  troubleshooting.md
docs/adr/: 0001-layered-architecture.md  0002-sqlite-source-of-truth.md  0003-native-parser-isolation.md  0004-mcp-as-adapter.md
scripts/: benchmark_repository.py  build_test_repository.py  semantic_smoke.py  setup.ps1  setup.sh
src/code_harness/: __init__.py  __main__.py
src/code_harness/application/: __init__.py  pagination.py
src/code_harness/application/context/: __init__.py  query_windows.py  token_budget.py
src/code_harness/application/dto/: __init__.py  requests.py
src/code_harness/application/indexing/: __init__.py  change_detector.py  chunk_builder.py  index_coordinator.py
src/code_harness/application/ranking/: __init__.py  hybrid_ranker.py  lexical_expansion.py  query_classifier.py
src/code_harness/application/tools/: __init__.py  _timing.py  build_context.py  doctor.py  get_index_status.py  get_repository_map.py  index_project.py  index_state.py  initialize_index.py  list_files.py  prepare_semantic_model.py  read_file.py  read_range.py  search_code.py  search_files.py  search_regex.py  search_text.py  semantic_search.py  (+1 more)
src/code_harness/bootstrap/: __init__.py  container.py  project_registry.py  settings.py  tls.py
src/code_harness/domain/: __init__.py  enums.py  errors.py
src/code_harness/infrastructure/: __init__.py
src/code_harness/interfaces/: __init__.py  serialization.py
tests/: conftest.py
tests/contract/: test_architecture.py  test_mcp_adapter.py
tests/fixtures/sample_repository/: README.md
tests/integration/: test_cli.py  test_hybrid_context.py  test_indexing.py  test_python_api.py  test_semantic_search.py  test_structural_analysis.py
tests/unit/: test_application_tools.py  test_capability_contracts.py  test_capability_reporter.py  test_change_detector.py  test_context_builder.py  test_embedding_provider.py  test_file_catalog.py  test_find_references.py  test_hybrid_ranking.py  test_lexical_expansion.py  test_list_files_pagination.py  test_models_and_requests.py  test_native_embedding_supervisor.py  test_native_parser_supervisor.py  test_native_worker.py  test_output_renderer.py  test_path_guard.py  test_project_registry.py  test_query_windows.py  test_ripgrep_components.py  test_semantic_health_cache.py  test_semantic_preparation.py  test_serialization.py  test_settings.py  test_signature_extractor.py  test_source_reader.py
(+73 files in other folders)
