[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "code-harness"
version = "0.1.0"
description = "Local-first, traceable code retrieval for humans and LLMs"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "code-harness contributors" }]
dependencies = [
  "pathspec>=0.12.1,<1",
  "typer>=0.16,<1",
]

[project.optional-dependencies]
parsers = []
semantic = []
mcp = []
all = []
dev = [
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[project.scripts]
code-harness = "code_harness.interfaces.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_harness"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["code_harness"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["code_harness"]
