[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "code-harness"
version = "0.1.0"
description = "Local-first, traceable code retrieval for humans and LLMs"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "code-harness contributors" }]
dependencies = [
  "pathspec>=0.12.1,<1",
  "typer>=0.16,<1",
]

[project.optional-dependencies]
parsers = [
  "tree-sitter>=0.25,<0.27",
  "tree-sitter-java>=0.23.5,<0.24",
  "tree-sitter-python>=0.25,<0.26",
]
semantic = [
  "fastembed==0.8.0",
  "huggingface-hub==1.24.0",
  "onnxruntime==1.27.0",
  "truststore==0.10.4",
]
mcp = []
all = [
  "fastembed==0.8.0",
  "huggingface-hub==1.24.0",
  "onnxruntime==1.27.0",
  "truststore==0.10.4",
  "tree-sitter>=0.25,<0.27",
  "tree-sitter-java>=0.23.5,<0.24",
  "tree-sitter-python>=0.25,<0.26",
]
dev = [
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[project.scripts]
code-harness = "code_harness.interfaces.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_harness"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["code_harness"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["code_harness"]
